= Revision History

[cols="1,1,3"]
|===
|Version |Date |Notes

|1.0
|2016-08-26
|Initial version

|1.1
|2016-08-30
|Add *amountBeforeTax* and *taxAmount* to *monetaryAmount* object and deprecate *value* and *currency* from same.

Deprecate *travelAgency* and *totalTaxes* from *guestStay* object.

Deprecate *stayLengthUnits* from *stayLength* object.

Add `minute` as a possible enum to *timeUnitType* in *rate* object.

|1.2
|2016-12-18
|Add *result* and *guestStayListResult* objects

|1.3
|2016-12-19
|Add *guestStayResult* object.

Add *status*, *sourceField*, and *sourceValue* to *result* object.

Switch *field* in *result* object from JSON path to JSON pointer.

Add *guestStays* to *guestStayListResult* object and deprecate *errors* and *warnings* from same.

|1.4
|2017-06-13
|Add *profileResult* object.

Add *profileListResult* object.

Add *PMS Defined Fields* and *Property Defined Fields* to the *Profile* object.
|===